@@ -1,3 +1,4 @@
+* Show records names in relate window title
 * Add support for count on Action Window Domains
 * Manage custom login process
 * Add erase on Many2One
